Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25735

Viewport moves incorrectly in a window

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0
    • Qt3D 1.0
    • Qt3D
    • None
    • Qt5, Kubuntu and Nvidia driver

    Description

      I recently noticed a strange behavior for the QML Viewport in Qt3D.

      When I am having a Qt3D QML Viewport inside a top level window and move the window, the Viewport is not moving correctly with the window. In y direction it does not move at all and in x, much to fast. I.e. if I m moving my top level window I am moving my scene out of the window. This btw happens only to the 3D elements, not to the 2D ones.

      I am also having problems when resizing a window. Most of the times my system completely crashes. But I am not sure if these problems are related.

      Attachments

        For Gerrit Dashboard: QTBUG-25735
        # Subject Branch Project Status CR V

        Activity

          People

            sergey.dubitskiy Sergey (closed Nokia identity) (Inactive)
            bomb3rman Fabian Bumberger
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes