Viewport moves incorrectly in a window.

Task-number: QTBUG-25735
Change-Id: If925eef0d868c5e7abfad533af9248828281bb30
Reviewed-by: Danny Pope <daniel.pope@nokia.com>